<resources>
    <string name="app_name">AppStoryAditya</string>
    <string name="masukan_password">Masukkan Password</string>
    <string name="masukan_email">Masukkan Email</string>
    <string name="tidak_boleh_kosong">Tidak boleh kosong</string>
    <string name="harus_lebih_8_karakter">Harus lebih dari 8 karakter</string>
    <string name="format_email_salah">Format email salah (@)</string>
    <string name="login">Login</string>
    <string name="terjadi_kesalahan">Terjadi kesalahan, coba lagi</string>
    <string name="sukses">Story Berhasil Ditambahkan</string>
    <string name="email">Email</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="back">Klik Disini Untuk Kembali</string>
    <string name="enter_name">Masukkan nama</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="welcome">Selamat datang %1$s !</string>
    <string name="date">1 Januari 2024</string>
    <string name="deskripsi">Lorem Ipsum 20</string>
    <string name="add_story">Tambah sebuah story</string>
    <string name="tgl_ungah">di bagikan tanggal %1$s</string>
    <string name="logout">Keluar</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="image">gambar</string>
    <string name="detail_story">Detail Story</string>
    <string name="A">A</string>
    <string name="choose_photo_first">Pilih story terlebih dahulu</string>
    <string name="appwidget_text">Story App</string>
    <string name="add_widget">Tambah wigdet</string>
    <string name="app_widget_description">ini adalah deskripsi widget</string>
    <string name="empty_text">Tidak ada data</string>
    <string name="retry">Coba lagi</string>
    <string name="location">Lokasi (Opsional)</string>
    <string name="permission_denied">Tidak mendapatkan permission</string>
    <string name="title_activity_user_location">UserLocationActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="title_activity_user_maps">User Location</string>
    <string name="marker_in">Marker in %1$s</string>
    <string name="location_not_found">Lokasi Tidak Diketahui</string>
    <string name="pick_photo_first">Pilih foto dulu</string>
    <string name="tambahkan_story">Tambahkan Story</string>
    <string name="invalid_domain">Domain tidak valid. Harap gunakan domain yang berakhir dengan ".com".</string>
    <string name="invalid_email_format">Format email tidak valid. Harap masukkan alamat email dengan benar.</string>


</resources>