<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".api.ActivityAddStory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/opensansbold"
            android:text="@string/tambahkan_story"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_back">

            <ImageView
                android:id="@+id/img_story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_image" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/opensanscondensedmedium"
            android:text="@string/camera"
            app:cornerRadius="32dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/opensanscondensedmedium"
            android:text="@string/gallery"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
            app:layout_constraintEnd_toEndOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/description"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensanscondensedmedium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/dicoding"
            android:fontFamily="@font/opensanscondensedmedium"
            android:text="@string/upload"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@+id/il_description"
            app:layout_constraintStart_toStartOf="@+id/il_description"
            app:layout_constraintTop_toBottomOf="@+id/il_description" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>