<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/turunan"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:backgroundTint="@android:color/darker_gray">

                <TextView
                    android:id="@+id/tv_first_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppinsextrabold"
                    android:maxLength="1"
                    android:textColor="@color/white"
                    tools:text="@string/A" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppinssembiold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/card_view"
                app:layout_constraintStart_toEndOf="@+id/card_view"
                app:layout_constraintTop_toTopOf="@+id/card_view"
                tools:text="@string/name" />

            <ImageView
                android:id="@+id/img_stories"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:maxLength="10"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_stories"
                tools:text="@string/date" />


            <TextView
                android:id="@+id/tv_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_created_at"
                app:layout_constraintTop_toBottomOf="@+id/tv_created_at"
                tools:text="@string/deskripsi" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>